--- a/SheinMagistracy/SheinMagistracy.csproj
+++ b/SheinMagistracy/SheinMagistracy.csproj
@@ -22,4 +22,11 @@
     <Folder Include="wwwroot\images\exercise\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Exercise\Details.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
